# ezlo

./: .gitignore  LICENSE  README.md  default.nix  ezlo.nix  flake.nix  pyproject.toml
ezlo/: __main__.py
ezlo/rules/: meta-description-capitalize.nix  meta-description-no-article.nix  meta-description-no-pname.nix  meta-description-trailling-dot.nix  meta-homepage-https.nix  phase-deprecated.nix
