[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ezlo"
version = "0.0.1"
description = "i have to find a description"
# TODO: readme = "README.md"
requires-python = ">=3.10"
dependencies = []
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.scripts]
ezlo = "ezlo.__main__:main"

[tool.setuptools.packages.find]
include = ["*"]
